# mini-ml

./: LICENSE  README.md  compile  mini-ml.cabal
app/: Main.hs
examples/: factorial.miniml  fun_bool_arg.miniml  fun_bool_ret.miniml  fun_closure.miniml  mandelbrot.miniml  mandelbrot_printdot.miniml  mult.miniml  prog1.miniml  prog2.miniml  recursive_fun.miniml
src/: Compiler.hs  Expr.hs  FreeVars.hs  FreshName.hs  Interpreter.hs  Lexer.x  Parser.y  Test.hs  Type.hs  TypeContext.hs  TypeInference.hs  TypeInference2.hs  TypeSubstitution.hs  TypeSubstitution2.hs  libutil.c
src/Compiler/: Llvm.hs
test/: Spec.hs
