name:                mini-ml
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/authchir/mini-ml#readme
license:             ISC
license-file:        LICENSE
author:              Martin Desharnais
maintainer:          martin.desharnais@gmail.com
copyright:           2016 Martin Desharnais
category:            Compiler
build-type:          Simple
extra-source-files:  src/Lexer.x
                     src/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-tools:         alex, happy
  exposed-modules:     Lexer, Parser, Type, FreshName, Interpreter
  build-depends:       base >= 4.7 && < 5
                     , array
                     , mtl
  default-language:    Haskell2010

executable mini-ml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mini-ml
  default-language:    Haskell2010

test-suite mini-ml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mini-ml
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/authchir/mini-ml
